# atomspace-websockets

./: .gitignore  CMakeLists.txt  README.md  sample.scm
src/: CMakeLists.txt  Worker.cpp  Worker.h  main.cpp
src/manager/: AtomSpaceManager.cpp  AtomSpaceManager.h
tests/manager/: AtomSpaceManagerUTest.cxxtest  CMakeLists.txt  settings.json
